# aws-cr-backend

./: .env  .gitignore  Cargo.toml  Makefile  README.md  api-structure.xcf  db-schema.md  implementation-list.md
CR-api/: Cargo.toml
CR-api/src/: accounts.rs  admin.rs  lib.rs  main.rs  payment.rs  response.rs  storage.rs
HashTester/: Cargo.toml  README.md
HashTester/src/: main.rs
encryption-cli/: Cargo.toml  README.md
encryption-cli/src/: main.rs
scripts/: download-check-config.sh  list_tables.py  prepare.sh  run-with-systemd.sh  setup_dynamo.py
src/: accounts.rs  lib.rs  response.rs  tests.rs
