[package]
name = "cr-backend"
authors = ["Sean Ray <seanray410@gmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.1"
tokio = "1.18.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
log = "0.4.17"
pretty_env_logger = "0.4.0"
aws_lambda_events = "0.6.3"
thiserror = "1.0.31"
sha3 = "0.10.1"
regex = "1.5.5"
lazy_static = "1.4.0"
chrono = "0.4.19"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
